--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<script>
-var host = "YOURDOMAIN.github.io";
-if ((host == window.location.host) && (window.location.protocol != "https:"))
-    window.location.protocol = "https";
-</script>
+<head>
+  <meta http-equiv="refresh" content="0; URL=https://www.quant.phd">
+</head>
