--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<head>
+<!-- <head>
   <meta http-equiv="refresh" content="0; URL=https://www.quant.phd">
+</head> -->
+
+<head>
+  <script>
+    window.location.replace("https://www.quant.phd/");
+  </script>
 </head>
