--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!-- <head>
-  <meta http-equiv="refresh" content="0; URL=https://www.quant.phd">
-</head> -->
-
 <head>
+  <meta http-equiv="refresh" content="0; URL=https://www.quant.phd">
+</head>
+
+<!-- <head>
   <script>
-    var targetURL = "https://www.quant.phd/";
+    var targetURL = "https://www.quant.phd";
     var path = window.location.pathname;
     window.location.replace(targetURL + path);
   </script>
-</head>
+</head> -->
 
